# pants-example-python-multiple-packages

./: pants.toml
src/python/binary_project1/src/: BUILD
src/python/binary_project1/tests/: BUILD
src/python/binary_project2/: BUILD
src/python/library_project1/src/: BUILD
src/python/library_project1/tests/: BUILD
src/python/library_project2/src/: BUILD  pyproject.toml
src/python/library_project2/tests/: BUILD
src/python/setuppy_project1/src/: BUILD
src/python/setuppy_project1/tests/: BUILD
